(Feat): Refactor on 2 Services Impl and 1 Mapper